--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@
     display: flex;
     align-items: center;
     background-color: var(--my-bkg-tab-color);
-    margin-bottom: -1px;
+    /* margin-bottom: -1px; */
     display: flex;
     min-width: 0; /* Serve per far andare overflow ellipsis */
 }
@@ -65,7 +65,7 @@
 
 .active {
     background-color: var(--my-bkg-tab-active-color) !important;
-    border-bottom-color: var(--my-bkg-tab-active-color);
+    border-bottom-color: var(--my-bkg-tab-active-color) !important;
     box-shadow: inset 0px 3px var(--my-active-color);
     border-top: var(--my-active-color) !important;
     color: var(--my-text-active-color);
@@ -94,4 +94,11 @@
 }
 .action-add a:hover {
     color: var(--my-active-color);
+}
+
+.my-border-filler {
+    border-bottom: 1px solid var(--my-border-color);
+    background-color: var(--my-bkg-color);
+    filter: none !important;
+    flex: 1;
 }
