--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
+@keyframes tab-ripple {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
+}
+
+span.tab-ripple {
+    position: absolute; /* The absolute position we mentioned earlier */
+    border-radius: 50%;
+    transform: scale(0);
+    animation: tab-ripple 600ms linear;
+    background-color: rgba(255, 255, 255, 0.7);
+}
 
 .my-tabstrip-ul {
     padding: 0;
