--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,17 @@
 }
 
 @keyframes tab-slide-in {
-	from {
-		transform: translateX(-100%);
-		opacity: 0;
-	}
-	to {
-		transform: translateX(0%);
-		opacity: 1;
-	}
-    	/* from {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
+    /* from {
 		transform: scale(0);
 		opacity: 0;
 	}
@@ -25,7 +27,8 @@
 }
 
 span.tab-ripple {
-    position: absolute; /* The absolute position we mentioned earlier */
+    position: absolute;
+    /* The absolute position we mentioned earlier */
     border-radius: 50%;
     transform: scale(0);
     animation: tab-ripple 400ms linear;
@@ -43,20 +46,36 @@ span.tab-ripple {
     align-items: stretch;
     line-height: initial;
     text-align: initial;
-    
 }
 
 .my-tabstrip-li {
     cursor: pointer;
     display: flex;
     align-items: center;
-    min-width: 0; /* Serve per far andare overflow ellipsis */
-    animation: tab-slide-in .3s linear;
+    min-width: 0;
+    /* Serve per far andare overflow ellipsis */
+    animation: tab-slide-in 0.3s linear;
     overflow: hidden;
 }
 
 .my-tabstrip-li:hover {
     filter: brightness(1.05);
+}
+
+.my-tabstrip-li-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+
+.my-tabstrip-li-subtitle {
+    font-size: 10px;
+    /* color: rgba(0, 0, 0, 0.6); */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 2px;
 }
 
 .my-tabstrip-li-a {
@@ -65,11 +84,13 @@ span.tab-ripple {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .my-tabstrip-li-icon {
     padding: 2px 4px;
     margin-left: 8px;
     margin-right: -8px;
 }
+
 .my-tabstrip-li-icon:hover {
     filter: brightness(1.05);
 }
@@ -91,3 +112,4 @@ span.tab-ripple {
     padding: 2px;
     border-radius: 4px;
 }
+
