--- a/src/style.css
+++ b/src/style.css
@@ -41,12 +41,22 @@ span.tab-ripple {
     list-style-type: none;
     height: 100%;
     display: flex;
-    flex-direction: row;
     flex-wrap: nowrap;
     align-items: stretch;
     line-height: initial;
     text-align: initial;
 }
+
+.my-tabstrip-ul-horizontal {
+    width: 100%;
+    flex-direction: row;
+}
+
+.my-tabstrip-ul-vertical {
+    width: 100%;
+    flex-direction: column;
+}
+
 
 .my-tabstrip-li {
     cursor: pointer;
