--- a/src/style.css
+++ b/src/style.css
@@ -123,3 +123,18 @@ span.tab-ripple {
     border-radius: 4px;
 }
 
+/* Vertical add button styling */
+.my-tabstrip-ul-vertical .action-add {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 8px;
+    padding-left: 16px;
+}
+
+.my-tabstrip-add-label {
+    margin-left: 8px;
+    white-space: nowrap;
+}
+
