--- a/src/style.css
+++ b/src/style.css
@@ -157,9 +157,14 @@ span.tab-ripple-horizontal {
 
 /* SVG styling for close icon */
 .my-tabstrip-li-close-icon svg {
+    width: 16px;
+    height: 16px;
+    display: block;
+}
+
+.my-tabstrip-li-close-icon-compact svg {
     width: 12px;
     height: 12px;
-    display: block;
 }
 
 .active:hover {
